--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^2.1.0",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "joi": "^17.12.1",
     "localforage": "^1.10.0",
     "lucide-react": "^0.323.0",
     "match-sorter": "^6.3.4",
