--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@reduxjs/toolkit": "^2.2.0",
+    "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "joi": "^17.12.1",
@@ -35,6 +38,7 @@
     "react-css-theme-switcher": "^0.3.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.2.1",
