--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev:front": "vite",
     "dev:back": "nodemon backend/server.js",
     "dev": "concurrently \"npm run dev:back\" \"npm run dev:front\"",
+    "test": "jest",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
@@ -34,28 +35,37 @@
     "match-sorter": "^6.3.4",
     "mongoose": "^8.1.1",
     "nodemon": "^3.0.3",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-css-theme-switcher": "^0.3.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
+    "react-toastify": "^10.0.4",
     "sort-by": "^1.2.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "yamljs": "^0.3.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
     "@types/node": "^20.11.16",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
+    "babel-jest": "^29.7.0",
     "concurrently": "^8.2.2",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "jest": "^29.7.0",
     "postcss": "^8.4.34",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.8"
